--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@
          border: 2px solid red;
   border-radius: 4px;
   background-color:antiquewhite;
-  color: white;
+  color:blue;
   transition: width 0.4s ease-in-out;
         margin-top: 100px;
       }
